--- a/style.css
+++ b/style.css
@@ -1,13 +1,91 @@
-.todo-form {
-    padding: 50px;
-    background-color: orange;
-    border: 1px solid black;
-    width: 200px;
+* {
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body {
+    background-color: rgb(3, 3, 31);
+    text-align: center;
+    color: white;
+}
+h1 {
+    font-size: 10vmin;
+    padding: 20px 0px;
+}
+.form {
+    padding-bottom: 40px;
+    
 }
 
 button {
-    background-color: aqua;
-    color: grey;
-    border-color: aqua;
+    padding: 10px;
+}
+
+#inputText {
+    font-size: 3vmin;
     border-radius: 5px;
+    padding: 10px;
+    border: none;
+    border-right: 4px solid black;
+    border-bottom: 4px solid black;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+/* #inputText:focus {
+    border: none;
+    border-style: none;
+} */
+#addBtn {
+    font-size: 3vmin;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    border-right: 4px solid black;
+    border-bottom: 4px solid black;
+}
+/* #addBtn:hover {
+    border: 1px solid green;
+    cursor: pointer;
+} */
+
+.displayText 
+.displayResult {
+    list-style-type: none;
+}
+
+.displayTextResult {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.displayTextResult > li {
+    padding-right: 20px;
+    font-size: 40px;
+}
+
+.completeBtn, .deleteBtn {
+    margin: 10px;
+    /* font-size: 10px;
+    padding: 5px;
+    width: 10px;
+    height: 5px; */
+}
+
+/* 
+
+.complete:hover, .delete:hover 
+.completeBtn:hover, .deleteBtn:hover {
+    border: none;
+    cursor: pointer;
+} */
+
+[done] {
+    color: rgb(215, 218, 10);
+    text-decoration: line-through;
+}
+
+.delete_todo {
+    display: none;
 }
